[tool.poetry]
name = "gateway"
version = "0.1.0"
description = "API gateway sandbox"
authors = ["Fajar Garnadi <fajar.garnadi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
gunicorn = "^20.1.0"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
